1.增加Tab这块的todo 2.还需要做一个流式布局来实现最后的导航栏

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,10 @@
             app:operationAnimDuration="300"
             app:operationIcon="@drawable/ic_expand_more_24dp"/>
 
+        <com.droidworker.flowlayout.FlowLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
