--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,8 @@
             app:tagLeftMargin="12dp"
             app:tagRightMargin="12dp"
             app:tagTopMargin="10dp"
-            app:tagBottomMargin="10dp">
+            app:tagBottomMargin="10dp"
+            app:tagTextColor="#cccccc">
 
         </com.droidworker.flowlayout.TagFlowLayout>
 
