现在可以正常展示所有tab样式

--- a/tabscontainer/src/main/res/values/attrs.xml
+++ b/tabscontainer/src/main/res/values/attrs.xml
@@ -2,15 +2,16 @@
 <resources>
     <declare-styleable name="TabsContainer">
         <attr name="tabTextSize" format="dimension"/>
-        <attr name="tabTextColor" format="color"/>
-        <attr name="tabSelectedTextColor" format="color"/>
+        <attr name="tabColor" format="color"/>
+        <attr name="tabSelectedColor" format="color"/>
         <attr name="tabPadding" format="dimension"/>
         <attr name="tabPaddingStart" format="dimension"/>
         <attr name="tabPaddingTop" format="dimension"/>
         <attr name="tabPaddingEnd" format="dimension"/>
         <attr name="tabPaddingBottom" format="dimension"/>
         <attr name="tabMinWidth" format="dimension"/>
-        <attr name="tabMaxWidth" format="dimension"/>
+        <attr name="tabTitleMaxWidth" format="dimension"/>
+        <attr name="tabTitleMarginTop" format="dimension"/>
         <attr name="tabBackground" format="reference"/>
         <attr name="indicatorColor" format="reference"/>
         <attr name="indicatorHeight" format="dimension"/>
