--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         </android.support.v7.widget.Toolbar>
 
         <com.droidworker.tabscontainer.TabsContainer
-            android:id="@+id/tabs_container"
+            android:id="@+id/title_tabs_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
@@ -49,7 +49,7 @@
             app:tagRightMargin="12dp"
             app:tagTopMargin="10dp"
             app:tagBottomMargin="10dp"
-            app:tagTextColor="#cccccc">
+            app:tagTextColor="@color/grey">
 
         </com.droidworker.flowlayout.TagFlowLayout>
 
@@ -61,4 +61,26 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+    <com.droidworker.tabscontainer.TabsContainer
+        android:id="@+id/icon_tabs_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:layout_gravity="bottom"
+        app:tabPaddingBottom="10dp"
+        app:tabPaddingEnd="12dp"
+        app:tabPaddingStart="12dp"
+        app:tabPaddingTop="10dp"/>
+
+    <com.droidworker.tabscontainer.TabsContainer
+        android:id="@+id/tabs_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:layout_gravity="center"
+        app:tabPaddingBottom="10dp"
+        app:tabPaddingEnd="12dp"
+        app:tabPaddingStart="12dp"
+        app:tabPaddingTop="10dp"
+        app:tabTextSize="14sp"/>
 </android.support.design.widget.CoordinatorLayout>
