支持tab平分当前视图宽度

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,8 @@
             app:tabPaddingEnd="12dp"
             app:tabPaddingStart="12dp"
             app:tabPaddingTop="10dp"
-            app:tabTextSize="14sp"/>
+            app:tabTextSize="14sp"
+            app:tabSplitWay="average"/>
 
     </LinearLayout>
 
