--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_layout"
-        android:layout_below="@id/appbar"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="?attr/actionBarSize"/>
 
     <LinearLayout
         android:id="@+id/bottom_layout"
