--- a/flowlayout/src/main/res/values/attrs.xml
+++ b/flowlayout/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="TagFlowLayout">
+    <declare-styleable name="FlowLayout">
         <attr name="tagMargin" format="dimension"/>
         <attr name="tagLeftMargin" format="dimension"/>
         <attr name="tagTopMargin" format="dimension"/>
