做了很多效果上的修正

--- a/flowlayout/src/main/res/values/attrs.xml
+++ b/flowlayout/src/main/res/values/attrs.xml
@@ -6,5 +6,7 @@
         <attr name="tagTopMargin" format="dimension"/>
         <attr name="tagRightMargin" format="dimension"/>
         <attr name="tagBottomMargin" format="dimension"/>
+        <attr name="indicatorColor" format="reference"/>
+        <attr name="indicatorHeight" format="dimension"/>
     </declare-styleable>
 </resources>
