--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,19 @@
                 android:background="@color/grey"
                 tools:context="com.droidworker.tabscontainerdemo.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.v4.view.ViewPager
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom_layout"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="?attr/actionBarSize"/>
+
+    <LinearLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -44,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:tagBottomMargin="10dp"
             app:tagLeftMargin="12dp"
             app:tagRightMargin="12dp"
@@ -52,15 +61,7 @@
 
         </com.droidworker.flowlayout.FlowLayout>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bottom_layout"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="?attr/actionBarSize"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/bottom_layout"
